# TxsLpeOps

./: .gitignore  stack.yaml  stack_linux.yaml
_tex/lpeopsDoc/: confCheck.tex  confElm.tex  constElm.tex  dataReset.tex  lpeDefinition.tex  lpeopsDoc.tex  parElm.tex  parReset.tex
examps/Adder/: Adder.txs  ReducedAdderAdder3.txs  ReducedMAdderAdder.txs  UnchangedAdderAdder3.txs  UnchangedMAdderAdder.txs
examps/Ark/: Ark.txs  Out.txs
examps/Bakery/: ReducedBakeryModel.txs  UnchangedBakeryModel.txs
examps/ControlLoop/: ControlLoopModel.txs  ControlLoopModel2.txs  MultipleControlLoops.txs
examps/CustomersOrders/: CustomersOrders.txs
examps/Echo/: Echo.txs
examps/LuckyPeople/spec/: ReducedLuckyPeopleModel.txs  Unchanged.mcrl2  UnchangedLuckyPeopleModel.txs
examps/Queue/: Out.txs  Queue.txs  ReducedLPE.txs
examps/ReadWriteConflict/: Out.txs  ReducedReadWriteModel.txs  UnchangedReadWriteModel.txs
sys/behave/test/: TestHelperFuncContent.hs
sys/core/: core.cabal
sys/core/src/: TxsCore.hs
sys/defs/: defs.cabal
sys/defs/src/: ShowBExpr.hs  XmlFormat.hs
sys/lpe/src/: LPE.hs
sys/lpeops/: lpeops.cabal
sys/lpeops/src/: LPE2MCRL2.hs  LPEClean.hs  LPEConfCheck.hs  LPEConstElm.hs  LPEDataReset.hs  LPEIsDet.hs  LPEMkUniq.hs  LPEOps.hs  LPEParElm.hs  LPEParRemoval.hs  LPEParReset.hs  LPEParReset2.hs  LPEParUsage.hs  LPERTraces.hs  LPETypeDefs.hs  LPETypes.hs  LPEUTraces.hs
sys/lpeops/src/mcrl2/: MCRL22TXT.hs  MCRL2Defs.hs  MCRL2Env.hs  MCRL2PrettyPrint.hs
sys/lpeops/src/utils/: BlindSubst.hs  ConcatEither.hs  LPEContextIds.hs  LPEContexts.hs  LPEParRemoval.hs  LPEParUsage.hs  LPEPrettyPrint.hs  LPESuccessors.hs  ModelIdFactory.hs  Satisfiability.hs  ValExprPrettyPrint.hs  ValExprVisitor.hs  ValExprVisitorM.hs  ValFactory.hs  VarFactory.hs
sys/lpeops/test/: TestClean.hs  TestConfCheck.hs  TestConstElm.hs  TestDataReset.hs  TestMain.hs  TestParElm.hs  TestParReset.hs  TestParReset2.hs  TestUtils.hs
sys/mcrl2/: mcrl2.cabal
sys/mcrl2/src/: MCRL2Defs.hs  TXS2MCRL2.hs  TXS2MCRL2Env.hs
sys/mcrl2/test/: TestMain.hs
sys/server/src/: TxsServer.hs
sys/solve/src/: RandIncrementBins.hs  RandIncrementChoice.hs  RandTrueBins.hs  SMT2TXS.hs  Solve.hs  TXS2SMT.hs
sys/solve/test/: TestConstraint.hs  TestRecursiveFunction.hs  TestSortDefToSMT.hs
sys/txs-compiler/: txs-compiler.cabal
sys/txs-compiler/src/TorXakis/: Compiler.hs
sys/txs-compiler/src/TorXakis/Compiler/ValExpr/: CstrDef.hs  CstrId.hs  FuncId.hs
sys/ui/src/: TxsHelp.hs  UI.hs
sys/valexpr/src/: CstrId.hs  ValExprDefs.hs  ValExprImpls.hs
test/sqatt/: data.html  sqatt.cabal
test/sqatt/data/bench/LPE/: OriginalAdder3Model.txs  OriginalAdderModel.txs  OriginalCustomersOrdersModel.txs  OriginalEchoLPEModel.txs  OriginalLossyQueueModel.txs  OriginalMAdderModel.txs  OriginalQueueModel.txs  ReducedAdder3Model.txs  ReducedAdderModel.txs  ReducedBakeryModel.txs  ReducedCustomersOrdersModel.txs  ReducedEchoDelayModel.txs  ReducedEchoLPEModel.txs  ReducedEchoModel.txs  ReducedLossyQueueModel.txs  ReducedLuckyPeopleModel.txs  ReducedMAdderAdder.txs  ReducedMAdderModel.txs  ReducedPointModel.txs  ReducedQueueModel.txs  ReducedReadWriteModel.txs  UnchangedAdder3Model.txs  UnchangedAdderModel.txs  UnchangedBakeryModel.txs  UnchangedCustomersOrdersModel.txs  UnchangedEchoLPEModel.txs  UnchangedEchoModel.txs  UnchangedLossyQueueModel.txs  UnchangedLuckyPeopleModel.txs  UnchangedMAdderAdder.txs  UnchangedMAdderModel.txs  UnchangedPointModel.txs  UnchangedQueueModel.txs  UnchangedReadWriteModel.txs
test/sqatt/data/bench/LPE/fail/: ReducedLuckyPeopleModel.txs  ReducedQueueLossy.txs  UnchangedAdderAdder3.txs  UnchangedLuckyPeopleModel.txs  UnchangedQueueLossy.txs
test/sqatt/src/Benchmarks/: All.hs  LPEAdder3.hs  LPEBakery.hs  LPEBenchmarkSets.hs  LPELuckyPeople.hs  LPEMAdder.hs  LPEQueueLossy.hs  LPEReadWrite.hs
