name:                   lpeops
version:                0.1
synopsis:               LPE for TorXakis
license:                BSD3
license-file:           license.txt
author:                 Djurre van der Wal

maintainer:             djurrevanderwal@gmail.com
copyright:              TNO?
category:               Web
build-type:             Simple
cabal-version:          >=1.10

library
  hs-source-dirs:       src
  hs-source-dirs:       src/utils
  hs-source-dirs:       src/mcrl2

  exposed-modules:    LPEOps
                    , LPEMkUniq
                    , LPEConstElm
                    , LPEParElm
                    , LPEDataReset
                    , LPEParReset
                    , LPETypes
                    , LPEConfCheck
                    , LPE2MCRL2
                    , LPEParRemoval
                    , LPEParUsage
                    , LPEPrettyPrint
                    , Satisfiability
                    , ValExprVisitor
                    , VarFactory
                    , MCRL2Defs
                    , MCRL2Env
                    , MCRL22TXT
                    , MCRL2PrettyPrint

  other-modules:      

  ghc-options:        -Werror -Wall -O2 -optc-O3 -optc-ffast-math

  build-depends:        base
                      , containers
                      , mtl
                      , text
                      , behave
                      , behaveenv
                      , coreenv
                      , solve
                      , defs
                      , bexpr
                      , valexpr

  default-language:     Haskell2010

test-suite lpeops-test
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       src
                      , src/utils
                      , test

  main-is:              TestMain.hs

  other-modules:        LPEOps
                      , LPEMkUniq
                      , LPEConstElm
                      , LPEParElm
                      , LPEDataReset
                      , LPEParReset
                      , LPETypes
                      , LPEConfCheck
                      , LPE2MCRL2
                      , LPEParRemoval
                      , LPEParUsage
                      , LPEPrettyPrint
                      , Satisfiability
                      , ValExprVisitor
                      , VarFactory
                      , MCRL2Defs
                      , MCRL2Env
                      , MCRL22TXT
                      , MCRL2PrettyPrint
                      , TestUtils
                      , TestConstElm
                      , TestParElm
                      , TestParReset
                      , TestDataReset
                      , TestConfCheck

  ghc-options:       -Werror -Wall -O2 -optc-O3 -optc-ffast-math -threaded -rtsopts -with-rtsopts=-N -fmax-pmcheck-iterations=100000000

  build-depends:       base
                     , containers
                     , mtl
                     , text
                     , HUnit
                     , MissingH
                     , behave
                     , coreenv
                     , solve
                     , defs
                     , bexpr
                     , valexpr

  default-language:    Haskell2010
