name:                   mcrl2
version:                0.1
synopsis:               LPE for TorXakis
license:                BSD3
license-file:           license.txt
author:                 Djurre van der Wal

maintainer:             djurrevanderwal@gmail.com
copyright:              TNO?
category:               Web
build-type:             Simple
cabal-version:          >=1.10

library
  hs-source-dirs:       src

  exposed-modules:    MCRL2Defs
                    , MCRL22TXT
                    , TXS2MCRL2
                    , TXS2MCRL2Env

  other-modules:      

  ghc-options:        -Werror -Wall -O2 -optc-O3 -optc-ffast-math

  build-depends:        base
                      , containers
                      , mtl
                      , text
                      , behave
                      , behaveenv
                      , coreenv
                      , defs
                      , bexpr
                      , valexpr

  default-language:     Haskell2010

test-suite lpe-test
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       src
                      , test

  main-is:              TestMain.hs

  other-modules:        

  ghc-options:       -Werror -Wall -O2 -optc-O3 -optc-ffast-math -threaded -rtsopts -with-rtsopts=-N -fmax-pmcheck-iterations=100000000

  build-depends:       base
                     , containers
                     , mtl
                     , text
                     , HUnit
                     , MissingH
                     , behave
                     , coreenv
                     , defs
                     , bexpr
                     , valexpr

  default-language:    Haskell2010
